[tool.poetry]
name = "compsoc-proglang"
version = "0.1.0"
description = ""
authors = ["Ben Simms <ben@bensimms.moe>"]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.2"
prompt-toolkit = "^3.0.28"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repl = 'compsoc_proglang:repl'
